--- a/package.json
+++ b/package.json
@@ -25,11 +25,20 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.4",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
+  },
+  "resolutions": {
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.57.0",
+    "@humanwhocodes/config-array": "^0.11.13",
+    "@humanwhocodes/object-schema": "^2.0.2",
+    "glob": "^10.3.10",
+    "rimraf": "^5.0.5"
   }
 }
 
