--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.279.0",
+    "lucide-react": "^0.468.0",
     "next": "^15.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,7 +38,9 @@
     "@humanwhocodes/config-array": "^0.11.13",
     "@humanwhocodes/object-schema": "^2.0.2",
     "glob": "^10.3.10",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
 
