--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
+    "@vercel/postgres": "^0.5.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "lucide-react": "0.279.0",
     "next": "15.0.4",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "1.14.0",
@@ -32,17 +34,6 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
-  "resolutions": {
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "overrides": {
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+  "type": "module"
 }
 
