--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "0.279.0",
     "next": "15.0.4",
     "node-fetch": "^3.3.2",
